vlib/v/checker/tests/append_fixed_array_to_empty_interface_array_err.vv
interface Any {}

fn main() {
	mut values := []Any{}
	values << [7, 8]!
}
